@@ -41,6 +41,10 @@ def on_first_keydown(win, event):
             win.editctrl.Navigation(False)
 Mixin.setPlugin('editor', 'on_first_keydown', on_first_keydown)
 
+def on_modified_routin(win):
+    win.mainframe.auto_onmodified.put(win)
+Mixin.setPlugin('editor', 'on_modified_routin', on_modified_routin)
+
 def on_modified(win):
     if win.edittype == 'edit':
         if not win.isModified():
@@ -49,3 +53,27 @@ def on_modified(win):
             wx.CallAfter(win.editctrl.showTitle, win)
             wx.CallAfter(win.editctrl.showPageTitle, win)
 Mixin.setPlugin('editor', 'on_modified', on_modified)
+
+from modules import Globals
+from modules.Debug import error
+from modules import AsyncAction
+class OnModified(AsyncAction.AsyncAction):
+    def do_action(self, obj):
+        win = Globals.mainframe
+        if not self.empty:
+            return
+        try:
+            if not obj: return
+            obj.callplugin('on_modified', obj)
+            return True
+        except:
+            error.traceback()
+
+def main_init(win):
+    win.auto_onmodified = OnModified(.2)
+    win.auto_onmodified.start()
+Mixin.setPlugin('mainframe', 'init', main_init)
+
+def on_close(win, event):
+    win.auto_onmodified.join()
+Mixin.setPlugin('mainframe','on_close', on_close)
